<resources>
    <string name="app_name">Keebuilder</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="user_name_hint">User Name</string>
    <string name="password">Password</string>
    <string name="logout_button_text">logout</string>
    <string name="registered_users">Registered Users</string>
    <string name="manage_users">Manage users</string>
    <string name="delete_user">Delete User</string>
    <string name="username_to_be_deleted">User to be modified</string>
    <string name="promote_to_admin">Toggle admin</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="add_item">Add Item</string>
    <string name="add_items">add items</string>
    <string name="wake_up_neo">Wake up Neo...</string>
    <string name="inventory">Inventory</string>
    <string name="update_inventory">Update inventory</string>
    <string name="update_item">Update Item</string>
    <string name="in_stock_items">In Stock Items</string>
    <string name="item_to_add">Item #</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="cart_summary">Cart Summary</string>
    <string name="quantity">Quantity</string>
    <string name="item">Item #</string>
    <string name="update_quantity">Update quantity</string>
    <string name="categoriesLabel">Filter Categories:</string>
    <string name="givememoney"> ______________________n
| Please give me money |
 ----------------------
        \   ^__^
         \  (oo)\_______
            (__)\       )\/\
                ||----w |
                ||     ||
</string>
    <string name="admin">Admin</string>
    <string name="back_to_the_shop">Back To the shop</string>
    <string name="buy_it">buy it!</string>
    <string name="go_home">GO HOme</string>
</resources>