<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart">

    <TextView
        android:id="@+id/Cart_list"
        android:layout_width="371dp"
        android:layout_height="229dp"
        android:layout_marginTop="16dp"
        android:fadeScrollbars="true"
        android:fontFamily="monospace"
        android:isScrollContainer="false"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cart_label" />

    <TextView
        android:id="@+id/Cart_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/cart_summary"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/Cart_update_item_Number"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cart_list" />

    <EditText
        android:id="@+id/Cart_update_qty_input"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cart_list" />

    <Button
        android:id="@+id/Cart_Update_qty_button"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/update_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cart_update_item_Number" />
    <Button
        android:id="@+id/Cart_back_to_store"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/back_to_the_shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cart_Update_qty_button" />

    <Button
        android:id="@+id/BUYIT"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/buy_it"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cart_back_to_store" />
</androidx.constraintlayout.widget.ConstraintLayout>