<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".AdminPage">

    <Button
        android:id="@+id/Admin_Manage_Users_Button"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:text="@string/manage_users"
        android:backgroundTint="#2F8F0C"
        android:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Admin_Add_Items_Button"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2F8F0C"
        android:backgroundTintMode="add"
        android:text="@string/add_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admin_Manage_Users_Button" />

    <TextView
        android:id="@+id/knock_knock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/vt323"
        android:text="@string/wake_up_neo"
        android:textColor="#65DF42"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>



