<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPage">

    <TextView
        android:id="@+id/Instock_list"
        android:layout_width="371dp"
        android:layout_height="229dp"
        android:layout_marginTop="16dp"
        android:background="#440F55"
        android:fadeScrollbars="true"
        android:isScrollContainer="false"
        android:text="test"
        android:textAlignment="center"
        android:textColor="#30C58E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Shopping_inventory_label" />

    <TextView
        android:id="@+id/Shopping_inventory_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/in_stock_items"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Shopping_add_to_cart_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Shopping_Item_qty_input_text" />

    <EditText
        android:id="@+id/Shopping_Item_input_text"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/item_to_add"
        android:inputType="number"

        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/Shopping_Item_qty_input_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Instock_list" />

    <EditText
        android:id="@+id/Shopping_Item_qty_input_text"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Catagory_Filter_Spinner" />

    <Button
        android:id="@+id/Shopping_go_to_cart_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="Go to cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Shopping_add_to_cart_button" />

    <Spinner
        android:id="@+id/Catagory_Filter_Spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/Shopping_Item_input_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Instock_list"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="28dp"
        android:text="@string/categoriesLabel"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Instock_list" />


</androidx.constraintlayout.widget.ConstraintLayout>